--- a/studycafe/src/App.css
+++ b/studycafe/src/App.css
@@ -4,14 +4,10 @@
 }
 
 .header {
-  padding : 1rem 2rem;
-  background: #3b5998;  /*set background color*/
-  display : flex; /*양옆으로 배열*/
+  padding: 1rem 2rem;
+  background: #3b5998;
+  display: flex;
   justify-content: space-between;
-  text-align: center;
   align-items: center;
-}
-
-.header h1 {
-  color: #fff
+  text-align: center;
 }
