--- a/studycafe/src/App.css
+++ b/studycafe/src/App.css
@@ -1,12 +1,6 @@
-.App {
-  display: flex;
-  flex-direction: column;
-}
-
-.header {
-  padding: 10px 0;
-  font-size: 20px;
-  background-color: #3d414c;
-  text-align: center;
-  color: #fff;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Encode Sans Exapnded", sans-serif;
 }
