--- a/진서/src/App.css
+++ b/진서/src/App.css
@@ -1,21 +1,14 @@
-.page {
+.App {
     display: flex;
     flex-direction: column;
 }
-.navBar.navBar {
-    width: 100%;
-    height: 100px;
-    background-color: mediumseagreen;
-}
-.footer {
-    width: 100%;
-    height: 100px;
-    background-color: lightgray;
-    position: fixed;
-}
-.loginBox {
-    width: 100%;
-    height: 500px;
-    
+
+.header {
+    padding: 1rem 2rem;
+    background-color: #3b5998;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    text-align: center;
+    position:fixed;
 }
