--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -14,9 +14,11 @@
       <div class="form">
         <form class="login-form">
           <input type="text" id="id" placeholder="아이디"/>
+          <input type="text" id="name" placeholder="이름"/>
           <input type="password" id="password" placeholder="비밀번호"/>
-          <button>login</button>
-          <p class="message">Not registered? <a href="/register">Create an account</a></p>
+          <input type="password" id="confirm-password" placeholder="비밀번호 확인"/>
+          <button>Sign up</button>
+          <p class="message">Already registered? <a href="/login">login</a></p>
         </form>
       </div>
     </div>
