--- a/app/src/public/css/home/login.css
+++ b/app/src/public/css/home/login.css
@@ -28,13 +28,14 @@
   box-sizing: border-box;
   font-size: 14px;
 }
-.form button {
+.form #button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
   background: #4caf50;
-  width: 100%;
+  width: 80%;
   border: 0;
+  margin: 0 auto;
   padding: 15px;
   color: #ffffff;
   font-size: 14px;
@@ -42,9 +43,9 @@
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,
-.form button:active,
-.form button:focus {
+.form #button:hover,
+.form #button:active,
+.form #button:focus {
   background: #43a047;
 }
 .form .message {
