--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -17,7 +17,11 @@
           <input type="text" id="name" placeholder="이름"/>
           <input type="password" id="password" placeholder="비밀번호"/>
           <input type="password" id="confirm-password" placeholder="비밀번호 확인"/>
-          <button>Sign up</button>
+          <!-- 
+            form 태그 안의 button 태그는 자동으로 submit됨
+            so, p 태그로 대체
+          -->
+          <p id="button">Sign up</p>
           <p class="message">Already registered? <a href="/login">login</a></p>
         </form>
       </div>
