렌더링 및 렌더링 쿼리 완료

--- a/admin_template/views/layout.ejs
+++ b/admin_template/views/layout.ejs
@@ -34,24 +34,13 @@
                             <span class="nav-link-text">Dashboard</span>
                         </a>
                         </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="examples/login.html">
-                            <i class="ni ni-key-25 text-info"></i>
-                            <span class="nav-link-text">Login</span>
-                        </a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="/table">
-                            <i class="ni ni-circle-08 text-pink"></i>
-                            <span class="nav-link-text">Table</span>
-                        </a>
-                        </li>
+                                              
                     </ul>
                     <!-- Divider -->
                     <hr class="my-3">
                     <!-- Heading -->
                     <h6 class="navbar-heading p-0 text-muted">
-                        <span class="docs-normal">Documentation</span>
+                        <span class="docs-normal">외부 링크</span>
                     </h6>
                     <!-- Navigation -->
                     <ul class="navbar-nav mb-md-3">
@@ -62,7 +51,7 @@
                         </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
+                        <a class="nav-link" href="https://localhost:3000/board" target="_blank">
                             <i class="ni ni-palette"></i>
                             <span class="nav-link-text">Community</span>
                         </a>
