--- a/admin_template/views/home.ejs
+++ b/admin_template/views/home.ejs
@@ -1,141 +1,247 @@
-<div class="header bg-primary pb-6">
-    <div class="container-fluid">
-        <div class="header-body">
-    
-        <!-- Card stats -->
-        <div class="row">
-            <div class="col-xl-3 col-md-6">
-            <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">회원 수</h5>
-                    <span class="h2 font-weight-bold mb-0"><%if(locals.err){%>
-                        <%=err%>
-                        <%}else if(locals.userName){%>
-                        <%=userName%>
-                    <%}%>
-
-                    </div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            test
+        </title>
+    </head>
+    <body>
+        <div class="header bg-primary pb-6">
+            <div class="container-fluid">
+                <div class="header-body">
                     
-                    <div class="col-auto">
-                    <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                        <i class="ni ni-chart-pie-35"></i>
-                    </div>
-                    </div>
-                </div>
-                <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">지난 달 대비</span>
-                </p>
-                </div>
-            </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-            <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
+                <!-- Card stats -->
                 <div class="row">
-                    <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">일일 매출</h5>
-                    <span class="h2 font-weight-bold mb-0">924</span>
+                    <div class="col-xl-3 col-md-6">
+                    <div class="card card-stats">
+                        <!-- Card body -->
+                        <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">회원 수(쿼리 구현 해놓음)</h5>
+                            <span class="h2 font-weight-bold mb-0">
+                                <%=userCount%>
+                                
+                            </div>
+                            
+                            <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                                <i class="ni ni-chart-pie-35"></i>
+                            </div>
+                            </div>
+                        </div>
+                        <p class="mt-3 mb-0 text-sm">
+                            <span class="text-nowrap">총 회원 수</span>
+                        </p>
+                        </div>
                     </div>
-                    <div class="col-auto">
-                    <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                        <i class="ni ni-money-coins"></i>
                     </div>
-                    </div>
+                
+                    <div class="col-xl-3 col-md-6">
+                        <div class="card card-stats">
+                            <!-- Card body -->
+                            <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                <h5 class="card-title text-uppercase text-muted mb-0">신규 고객 등록일자</h5>
+                                <span class="h2 font-weight-bold mb-0"><%=rglast%></span>
+                                </div>
+                                <div class="col-auto">
+                                <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                                    <i class="ni ni-money-coins"></i>
+                                </div>
+                                </div>
+                            </div>
+                            <p class="mt-3 mb-0 text-sm">                            
+                                <span class="text-nowrap">총 잔여 시간</span>
+                            </p>
+                            </div>
+                        </div>
+                        </div>
+
+                        <div class="col-xl-3 col-md-6">
+                          <div class="card card-stats">
+                              <!-- Card body -->
+                              <div class="card-body">
+                              <div class="row">
+                                  <div class="col">
+                                  <h5 class="card-title text-uppercase text-muted mb-0">역대 매출 총합</h5>
+                                  <span class="h2 font-weight-bold mb-0"><%=totalPayment%></span>
+                                  </div>
+                                  <div class="col-auto">
+                                  <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                                      <i class="ni ni-money-coins"></i>
+                                  </div>
+                                  </div>
+                              </div>
+                              <p class="mt-3 mb-0 text-sm">                            
+                                  <span class="text-nowrap">총 매출액</span>
+                              </p>
+                              </div>
+                          </div>
+                          </div>
                 </div>
-                <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">지난 달 대비</span>
-                </p>
                 </div>
             </div>
             </div>
-            <div class="col-xl-3 col-md-6">
-                <div class="card card-stats">
-                    <!-- Card body -->
-                    <div class="card-body">
-                    <div class="row">
-                        <div class="col">
-                        <h5 class="card-title text-uppercase text-muted mb-0">이번 달 매출</h5>
-                        <span class="h2 font-weight-bold mb-0">924</span>
-                        </div>
-                        <div class="col-auto">
-                        <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                            <i class="ni ni-money-coins"></i>
-                        </div>
-                        </div>
+            <!-- Page content -->
+    
+            <div class="header bg-primary pb-6">
+                <div class="container-fluid">
+                  <div class="header-body">
+                    <div class="row align-items-center py-4">
+                      <div class="col-lg-6 col-7">
+                        <h6 class="h2 text-white d-inline-block mb-0">Tables</h6>
+                        <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                          <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="#">Tables</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Tables</li>
+                          </ol>
+                        </nav>
+                      </div>
+                      
                     </div>
-                    <p class="mt-3 mb-0 text-sm">
-                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                        <span class="text-nowrap">지난 달 대비</span>
-                    </p>
-                    </div>
+                  </div>
                 </div>
-                </div>
-        </div>
-        </div>
-    </div>
-    </div>
-    <!-- Page content -->
-    <div class="container-fluid mt--6">
+              </div>
+
+              <!-- Page content -->
+<div class="container-fluid mt--6">
     <div class="row">
-        <div class="col-xl-8">
-        <div class="card bg-default">
-            <div class="card-header bg-transparent">
-            <div class="row align-items-center">
-                <div class="col">
-                <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
-                <h5 class="h3 text-white mb-0">매출 그래프</h5>
-                </div>
-                <div class="col">
-                <ul class="nav nav-pills justify-content-end">
-                    <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}' data-prefix="$" data-suffix="k">
-                    <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab">
-                        <span class="d-none d-md-block">월별</span>
-                        <span class="d-md-none">M</span>
-                    </a>
-                    </li>
-                    <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}' data-prefix="$" data-suffix="k">
-                    <a href="#" class="nav-link py-2 px-3" data-toggle="tab">
-                        <span class="d-none d-md-block">주별</span>
-                        <span class="d-md-none">W</span>
-                    </a>
-                    </li>
-                </ul>
-                </div>
-            </div>
-            </div>
-            <div class="card-body">
-            <!-- Chart -->
-            <div class="chart">
-                <!-- Chart wrapper -->
-                <canvas id="chart-sales-dark" class="chart-canvas"></canvas>
-            </div>
-            </div>
-        </div>
-        </div>
-        <div class="col-xl-4">
+      <div class="col">
         <div class="card">
-            <div class="card-header bg-transparent">
-            <div class="row align-items-center">
-                <div class="col">
-                <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-                <h5 class="h3 mb-0">월별 회원 가입</h5>
-                </div>
-            </div>
-            </div>
-            <div class="card-body">
-            <!-- Chart -->
-            <div class="chart">
-                <canvas id="chart-bars" class="chart-canvas"></canvas>
-            </div>
-            </div>
+          <!-- Card header -->
+          <div class="card-header border-0">
+            <h3 class="mb-0">Customer List Table</h3>
+          </div>
+          <!-- Light table -->
+          <div class="table-responsive">
+            <table class="table align-items-center table-flush">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col" class="sort" data-sort="name">이름</th>
+                  <th scope="col" class="sort" data-sort="payment">고객 결제 금액</th>          
+                  <th scope="col"></th>
+                  <th scope="col" class="sort" data-sort="time">예약 종료 날짜</th>
+              
+                  <th scope="col" class="sort" data-sort="date">등록 날짜</th>
+                </tr>
+              </thead>
+              <tbody class="list">
+                <tr>
+                  <th scope="row">
+                    <%=userName0%>
+                  </th>
+                  <td class="budget">
+                   <%=payment0%>
+                  </td>
+                  <td>
+                  </td>
+                  <td>
+                    <%=datelist0%>
+                  </td>
+                  <td>
+                    <%=register0%>
+                  </td>
+                  <td class="text-right">
+                   
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <%=userName1%>
+                  </th>
+                  <td class="budget">
+                    <%=payment1%>
+                  </td>
+                  <td>
+                    
+                  </td>
+                  <td>
+                    <%=datelist1%>
+                  </td>                
+                  <td>
+                    <%=register1%>
+                  </td>
+                  <td class="text-right">
+                    
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <%=userName2%>
+                  </th>
+                  <td class="budget">
+                    <%=payment2%>
+                  </td>
+                  <td>
+                   
+                  </td>
+                  <td>
+                    <%=datelist2%>      
+                  </td>                 
+                  <td>
+                    <%=register2%>
+                  </td>
+                  <td class="text-right">
+                    
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <%=userName3%>
+                  </th>
+                  <td class="budget">
+                    <%=payment3%>
+                  </td>
+
+                  <td>
+                    
+                  </td>
+                  <td>
+                    <%=datelist3%>
+                  </td>
+                  <td>
+                    <%=register3%>
+                  </td>
+                  <td class="text-right">
+                   
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <%=userName4%>
+                  </th>
+                  <td class="budget">
+                    <%=payment4%>
+                  </td>
+                  <td>
+                    
+                  </td>
+                  <td>
+                    <%=datelist4%>
+                  </td>
+                  <td>
+                    <%=register4%>
+                  </td>
+                  <td class="text-right">
+                   
+                    
+                   
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- Card footer -->
+         
         </div>
-        </div>
+      </div>
     </div>
+  
     <!-- Footer -->
-</div>
+    </body>
+</html>
+
+
