--- a/admin_template/views/table.ejs
+++ b/admin_template/views/table.ejs
@@ -45,7 +45,7 @@
             <tbody class="list">
               <tr>
                 <th scope="row">
-                
+                <%= userName1 %>
                 </th>
                 <td class="budget">
                   $2500 USD
@@ -64,7 +64,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                 
+              
                 </th>
                 <td class="budget">
                   $1800 USD
@@ -104,7 +104,7 @@
               </tr>
               <tr>
                 <th scope="row">
-               
+                 
                 </th>
                 <td class="budget">
                   $4400 USD
@@ -124,7 +124,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                  
+              
                 </th>
                 <td class="budget">
                   $2200 USD
@@ -148,31 +148,7 @@
           </table>
         </div>
         <!-- Card footer -->
-        <div class="card-footer py-4">
-          <nav aria-label="...">
-            <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">
-                  <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="#">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#">
-                  <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+        
       </div>
     </div>
   </div>
