관리자 페이지 우선  완료

--- a/admin_template/views/home.ejs
+++ b/admin_template/views/home.ejs
@@ -53,7 +53,7 @@
                                 </div>
                             </div>
                             <p class="mt-3 mb-0 text-sm">                            
-                                <span class="text-nowrap">총 잔여 시간</span>
+                                <span class="text-nowrap">현재 사용 중인 좌석 수</span>
                             </p>
                             </div>
                         </div>
